# xhorizon

./: .gitignore  .readthedocs.yaml  LICENSE  README.rst  README.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: apidoc-rebuild.bat
docs/source/: conf.py  dev.rst  gallery.rst  index.rst  requirements.txt  welcome.rst
docs/source/API/apidoc/: modules.rst  skeleton.rst  skeleton.sub1.modA.rst  skeleton.sub1.modB.rst  skeleton.sub1.rst  skeleton.sub2.modC.rst  skeleton.sub2.modD.rst  skeleton.sub2.rst  xhorizon.diagram_tools.block_fill.rst  xhorizon.diagram_tools.block_masks.rst  xhorizon.diagram_tools.coord_transf.rst  xhorizon.diagram_tools.curve_class.rst  xhorizon.diagram_tools.curvemakers.rst  xhorizon.diagram_tools.diagram_classes.rst  xhorizon.diagram_tools.plotstyle.rst  xhorizon.diagram_tools.region_factory.rst  xhorizon.diagram_tools.rst  xhorizon.evap.demo.rst  xhorizon.evap.demo_AdS.rst  xhorizon.evap.demo_dS.rst  xhorizon.evap.demo_zoom.rst  xhorizon.evap.draw.rst  xhorizon.evap.draw_dS.rst  xhorizon.evap.evap.rst  xhorizon.evap.helpers.rst  xhorizon.evap.legend.rst  xhorizon.evap.massplot.rst  xhorizon.evap.rst  xhorizon.evap.schwarzparams.rst  xhorizon.rst  (+14 more)
docs/source/TUTORIAL/: 00-overview.rst  capabilities.rst  lesson1.rst  lesson2.rst
scripts/tests/: temp.py
src/skeleton/sub1/: __init__.py
src/skeleton/sub2/: __init__.py
src/xhorizon/: __init__.py
src/xhorizon/diagram_tools/: plotstyle.py
src/xhorizon/evap/: demo.py  draw.py  evap.py  massplot.py
src/xhorizon/sub1/: modA.py  modB.py
src/xhorizon/sub2/: modC.py  modD.py
