[build-system]
requires = [
    "setuptools >= 42",
    "versioningit ~= 1.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit]

[tool.versioningit.format]
distance = "{version}+{distance}.{vcs}{rev}"
dirty = "{version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{version}+{distance}.{vcs}{rev}.dirty"
