[metadata]
name = xhorizon
author = Joseph C Schindler
author_email = jcschindler01@gmail.com
description = A Python package for explicitly computing Penrose diagrams in general relativity.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/xh-diagrams/xhorizon
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

# Uncomment to force install dependencies.
install_requires =
   numpy>=1.22.3
   scipy>=1.8.0
   matplotlib>=3.5.1,<4.0

[options.packages.find]
where = src
